[package]
name = "jacobin-wasm-sys"
version = "0.0.1"
authors.workspace = true
edition.workspace = true
description = "Rust bindings for Wasm build of Jacobin"

[dependencies]
anyhow.workspace = true

[build-dependencies]
cc = "1.0"
bindgen = "0.64.0"
walkdir = "2"

anyhow.workspace = true
# The dependencies below are pinned so they map exactly to the exemptions
native-tls = "0.2.11"
openssl-macros = "=0.1.0"
tokio = { version = "=1.26.0", default-features = false, features = ["rt", "macros", "net"] }
hyper = { version = "=1.0.0-rc.3", features = ["client", "http1"], default-features = false }
bytes = "=1.1.0"
futures-task = "=0.3.27"
futures-util = { version = "=0.3.27", default-features = false }
tokio-macros = "=1.7.0"
futures-core = "=0.3.27"
mio = "=0.8.6"
http-body-util = "=0.1.0-rc.2"
tokio-native-tls = "=0.3.1"

[dev-dependencies]
wizer = "3.0"
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
